Fix clipping in breadcrumb menu.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -342,6 +342,7 @@ img {
   .breadcrumb {
     white-space: nowrap;
     flex-grow: 1;
+    width: 100%;
   }
 
   .commit-info {
